--- a/HelmWorkShop/charts/powerdns/values.yaml
+++ b/HelmWorkShop/charts/powerdns/values.yaml
@@ -2,27 +2,100 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-powerdns:
-  api:
-    key: PowerDNSAPI
-  additionalArgs: 
-    - "--allow-dnsupdate-from=0.0.0.0/0"
-  initDomains: []
-
-
 replicaCount: 1
 
 image:
-  # repository: psitrax/powerdns
-  repository: interlegis/powerdns:4.4.0
-  # leave tag blank to use app version
-  tag:
+  repository: pschiffe/pdns-mysql
   pullPolicy: IfNotPresent
+  # Overrides the image tag whose default is the chart appVersion.
+  tag: ""
+
+imagePullSecrets: []
+nameOverride: ""
+fullnameOverride: ""
+
+# -- Additional environment variables mounted from [secrets](https://kubernetes.io/docs/concepts/configuration/secret/#using-secrets-as-environment-variables) or [config maps](https://kubernetes.io/docs/tasks/configure-pod-container/configure-pod-configmap/#configure-all-key-value-pairs-in-a-configmap-as-container-environment-variables).
+# See the [API reference](https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#environment-variables) for details.
+envFrom: []
+
+# -- Additional environment variables passed directly to containers.
+# See the [API reference](https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#environment-variables) for details.
+env: 
+  # https://github.com/pschiffe/docker-pdns/blob/master/docker-compose.yml
+  PDNS_gmysql_password: powerdns
+  # https://doc.powerdns.com/authoritative/settings.html#primary
+  PDNS_primary: yes
+  # https://doc.powerdns.com/authoritative/settings.html#api
+  PDNS_api: yes
+  # https://doc.powerdns.com/authoritative/settings.html#api-key
+  PDNS_api_key: PowerDNSAPI
+  # https://doc.powerdns.com/authoritative/settings.html#webserver
+  PDNS_webserver: yes
+  # https://doc.powerdns.com/authoritative/settings.html#webserver-address
+  PDNS_webserver_address: 0.0.0.0
+
+# -- Similar to env but with support for all possible configurations.
+# See the [API reference](https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#environment-variables) for details.
+envVars: []
+# - name: SOME_ENV_VAR
+#   value: value
+# - name: SOME_ENV_VAR2
+#   valueFrom:
+#     secretKeyRef:
+#       name: secret-name
+#       key: secret-key
+# - name: SOME_ENV_VAR3
+#   valueFrom:
+#     configMapKeyRef:
+#       name: config-map-name
+#       key: config-map-key
+
+serviceAccount:
+  # Specifies whether a service account should be created
+  create: true
+  # Annotations to add to the service account
+  annotations: {}
+  # The name of the service account to use.
+  # If not set and create is true, a name is generated using the fullname template
+  name: ""
+
+podAnnotations: {}
+
+podSecurityContext: {}
+  # fsGroup: 2000
+
+securityContext: {}
+  # capabilities:
+  #   drop:
+  #   - ALL
+  # readOnlyRootFilesystem: true
+  # runAsNonRoot: true
+  # runAsUser: 1000
 
 service:
-  type: ClusterIP
-  # annotations: {}
-  # ip
+  dns:
+    type: LoadBalancer
+  api:
+    type: ClusterIP
+    port: 8081
+
+ingress:
+  enabled: true
+  className: "traefik"
+  annotations:
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+    cert-manager.io/cluster-issuer: ca-issuer
+    traefik.ingress.kubernetes.io/router.middlewares: traefik-subpath-stripprefixregex@kubernetescrd
+  hosts:
+    - host: infra.sololab
+      paths:
+        - path: /sub-powerdns/
+          pathType: ImplementationSpecific
+  tls:
+   - secretName: sololab
+     hosts:
+       - infra.sololab
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
@@ -30,11 +103,18 @@ resources: {}
   # resources, such as Minikube. If you do want to specify resources, uncomment the following
   # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
   # limits:
-  #  cpu: 100m
-  #  memory: 128Mi
+  #   cpu: 100m
+  #   memory: 128Mi
   # requests:
-  #  cpu: 100m
-  #  memory: 128Mi
+  #   cpu: 100m
+  #   memory: 128Mi
+
+autoscaling:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 100
+  targetCPUUtilizationPercentage: 80
+  # targetMemoryUtilizationPercentage: 80
 
 nodeSelector: {}
 
@@ -42,28 +122,15 @@ tolerations: []
 
 affinity: {}
 
-##
-## MariaDB chart configuration
-##
+# https://github.com/bitnami/charts/blob/master/bitnami/mariadb/values.yaml
 mariadb:
   enabled: true
 
-  rootUser:
-    password: 
-
-  db:
-    ## MariaDB username and password
-    user: powerdns
+  auth:
+    rootPassword: 
+    database: powerdns
+    username: powerdns
     password: powerdns
-    ## Database to create
-    name: powerdns
 
-  replication:
-    enabled: false
-
-  master:
-    persistence:
-      enabled: false
-
-  tests:
-    enabled: false
+  persistence:
+    enabled: true
