--- a/HelmWorkShop/charts/powerdns/templates/service-dns-udp.yaml
+++ b/HelmWorkShop/charts/powerdns/templates/service-dns-udp.yaml
@@ -1,16 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "powerdns.fullname" . }}
+  name: {{ include "powerdns.fullname" . }}-dns-udp
   labels:
     {{- include "powerdns.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.dns.type }}
   ports:
-    - port: 53
-      targetPort: dns-tcp
-      protocol: TCP
-      name: dns-tcp
     - port: 53
       targetPort: dns-udp
       protocol: UDP
