update powerdns and dynamic dns update config

--- a/HelmWorkShop/charts/powerdns/templates/secret.yaml
+++ b/HelmWorkShop/charts/powerdns/templates/secret.yaml
@@ -6,5 +6,6 @@ metadata:
     {{- include "powerdns.labels" . | nindent 4 }}
 type: Opaque
 data:
-  MYSQL_PASS: {{ required "Missing variable: mariadb.auth.password" .Values.mariadb.auth.password | b64enc}}
-  MYSQL_ROOT_PASS: {{ required "Missing variable: mariadb.auth.rootPassword" .Values.mariadb.auth.rootPassword | b64enc}}
+  PDNS_api_key: {{ index .Values.powerdns "api-key" | required "Missing variable: powerdns.api-key" |b64enc}}
+  MYSQL_ENV_MYSQL_PASSWORD: {{ index .Values.powerdns "gmysql-password" | required "Missing variable: powerdns.gmysql-password" | b64enc}}
+  MYSQL_ENV_MYSQL_ROOT_PASSWORD: {{ required "Missing variable: powerdns.rootPassword" .Values.powerdns.rootPassword | b64enc}}
