--- a/HelmWorkShop/charts/powerdns/templates/deployment.yaml
+++ b/HelmWorkShop/charts/powerdns/templates/deployment.yaml
@@ -34,22 +34,42 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
+            - name: PDNS_primary
+              value: {{ .Values.powerdns.primary | quote }}
+            - name: PDNS_webserver
+              value: {{ .Values.powerdns.webserver | quote }}
+            - name: PDNS_webserver_address
+              # https://stackoverflow.com/questions/63853679/helm-templating-doesnt-let-me-use-dash-in-names
+              value: {{ index .Values.powerdns "webserver-address" | quote }}
+            - name: PDNS_webserver_allow_from
+              value: {{ index .Values.powerdns "webserver-allow-from" | quote }}
+            - name: PDNS_api
+              value: {{ .Values.powerdns.api | quote }}
+            - name: PDNS_api_key
+              valueFrom: 
+                secretKeyRef:
+                  name: {{ template "powerdns.fullname" . }}
+                  key: PDNS_api_key
             - name: MYSQL_ENV_MYSQL_HOST
+            {{- if .Values.mariadb.enabled }}
               value: {{ .Release.Name }}-mariadb
+            {{- else }}
+              value: {{ index .Values.powerdns "gmysql-host" | quote }}
+            {{- end }}
             - name: MYSQL_ENV_MYSQL_DATABASE
-              value: {{ .Values.mariadb.auth.database | quote }} 
+              value: {{ index .Values.powerdns "gmysql-dbname" | quote }}
             - name: MYSQL_ENV_MYSQL_USER
-              value: {{ .Values.mariadb.auth.username | quote }} 
+              value: {{ index .Values.powerdns "gmysql-user" | quote }}
             - name: MYSQL_ENV_MYSQL_PASSWORD
               valueFrom: 
                 secretKeyRef:
                   name: {{ template "powerdns.fullname" . }}
-                  key: MYSQL_PASS
+                  key: MYSQL_ENV_MYSQL_PASSWORD
             - name: MYSQL_ENV_MYSQL_ROOT_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: {{ template "powerdns.fullname" . }}
-                  key: MYSQL_ROOT_PASS
+                  key: MYSQL_ENV_MYSQL_ROOT_PASSWORD
             {{- range $key, $value := .Values.env }}
             - name: {{ $key }}
               value: {{ $value | quote }}
