--- a/HelmWorkShop/charts/powerdns/templates/secret.yaml
+++ b/HelmWorkShop/charts/powerdns/templates/secret.yaml
@@ -8,4 +8,4 @@ type: Opaque
 data:
   PDNS_api_key: {{ index .Values.powerdns "api-key" | required "Missing variable: powerdns.api-key" |b64enc}}
   MYSQL_ENV_MYSQL_PASSWORD: {{ index .Values.powerdns "gmysql-password" | required "Missing variable: powerdns.gmysql-password" | b64enc}}
-  MYSQL_ENV_MYSQL_ROOT_PASSWORD: {{ required "Missing variable: powerdns.rootPassword" .Values.powerdns.rootPassword | b64enc}}
+  MYSQL_ENV_MYSQL_ROOT_PASSWORD: {{ .Values.powerdns.rootPassword | required "Missing variable: powerdns.rootPassword" | b64enc}}
