--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = PackerWorkShop/hv-packer
 	url = https://github.com/fsdrw08/hv-packer.git
 	branch = SoloLab
+[submodule "HelmWorkShop/helm-charts"]
+	path = HelmWorkShop/helm-charts
+	url = https://github.com/fsdrw08/helm-charts.git
