--- a/VagrantWorkShop/InfraSvc-Alpine/Vagrantfile
+++ b/VagrantWorkShop/InfraSvc-Alpine/Vagrantfile
@@ -32,6 +32,7 @@ Vagrant.configure("2") do |config|
   config.vm.hostname = "InfraSvc-Alpine"
 
   config.vm.synced_folder "../../HelmWorkShop", "/var/vagrant/HelmWorkShop", type: "rsync", rsync__auto: true
+  config.vm.synced_folder "../../AnsibleWorkShop", "/var/vagrant/AnsibleWorkShop", type: "rsync", rsync__auto: true
 
   # set static ip for this VM
   config.vm.provision "file", source: "./interfaces.conf", destination: "/home/vagrant/interfaces"
@@ -39,7 +40,8 @@ Vagrant.configure("2") do |config|
 
   # install k8s related tools
   # for alpine
-  config.vm.provision "shell", inline: "sudo apk add helm curl yq git helmfile"
+  config.vm.provision "shell", inline: "sudo apk add curl yq git ansible py3-pip helm helmfile"
+  config.vm.provision "shell", inline: "ansible-galaxy collection install kubernetes.core"
   config.vm.provision "shell", inline: "sudo apk add bash lsblk nfs-utils open-iscsi"
   # for others
   # config.vm.provision "shell", inline: "sudo snap install helm --classic"
