--- a/AnsibleWorkShop/roles/infra-k8s-resources/tasks/Install-CertMan.yml
+++ b/AnsibleWorkShop/roles/infra-k8s-resources/tasks/Install-CertMan.yml
@@ -16,6 +16,8 @@
         values:
           installCRDs: true
       register: certManHelm
+      retries: 10
+      until: certManHelm is not failed
 
     - name: Get k3s server ca crt
       become: yes
