--- a/AnsibleWorkShop/roles/infra-k8s-resources/defaults/main.yml
+++ b/AnsibleWorkShop/roles/infra-k8s-resources/defaults/main.yml
@@ -6,3 +6,8 @@ traefik_helm_values_path: "{{ role_path }}/templates/Traefik/values.yaml"
 traefik_resources_dir: "{{ role_path }}/templates/Traefik"
 
 dex_helm_values_path: "{{ role_path }}/templates/Dex/values.yaml"
+dex_resources_dir: "{{ role_path }}/templates/Dex"
+
+coreDNS_resources_dir: "{{ role_path }}/templates/CoreDNS"
+
+loginapp_helm_values_path: "{{ role_path }}/templates/Loginapp/values.yaml"
