--- a/AnsibleWorkShop/roles/infra-k8s-resources/tasks/main.yml
+++ b/AnsibleWorkShop/roles/infra-k8s-resources/tasks/main.yml
@@ -12,4 +12,20 @@
 
   - name: Install Traefik
     ansible.builtin.include_tasks: Install-Traefik.yml
+    register: Install_Traefik
     when: Install_CertMan is succeeded
+
+  - name: Install Dex
+    ansible.builtin.include_tasks: Install-Dex.yml
+    register: Install_Dex
+    when: Install_Traefik is succeeded
+
+  - name: Set CoreDNS
+    ansible.builtin.include_tasks: Set-CoreDNS.yml
+    register: Set_CoreDNS
+    when: Install_Dex is succeeded
+
+  - name: Install Loginapp
+    ansible.builtin.include_tasks: Install-Loginapp.yml
+    register: Set_Loginapp
+    when: Set_CoreDNS is succeeded
