--- a/AnsibleWorkShop/Update-Text.yml
+++ b/AnsibleWorkShop/Update-Text.yml
@@ -1,9 +1,12 @@
 ---
 - hosts: localhost
-  gather_facts: false
+  gather_facts: true
   # https://www.middlewareinventory.com/blog/ansible-sudo-ansible-become-example/
   become: yes
   tasks:
+    - name: debug
+      debug: 
+        msg: "{{ ansible_service_mgr }}"
     - name: update text
       # https://docs.ansible.com/ansible/latest/collections/ansible/builtin/blockinfile_module.html
       ansible.builtin.blockinfile:
@@ -20,3 +23,4 @@
                   'oidc-username-claim=email' \
                   '--kube-apiserver-arg' \
                   'oidc-groups-claim=groups' \
+      when: ansible_service_mgr == "openrc"
