--- a/VagrantWorkShop/InfraSvc-Fedora/Vagrantfile
+++ b/VagrantWorkShop/InfraSvc-Fedora/Vagrantfile
@@ -12,29 +12,31 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "FEDORA34-G2"
-
-  config.vm.hostname = "InfraSvc-Fedora"
-
-  config.vm.network "private_network", bridge: "Internal Switch"
-
-  config.vm.synced_folder "../../HelmWorkShop", "/vagrant/HelmWorkShop", type: "rsync", rsync__auto: true
+  config.vm.box = "FEDORA36-G2"
 
   config.vm.provider "hyperv" do |hv, config|
     hv.vmname = "InfraSvc-Fedora"
-    hv.memory = 3072
+    hv.memory = 4096
     hv.cpus = 4
     # config.trigger.before :'VagrantPlugins::HyperV::Action::StartInstance', type: :action do |trigger|
     #   trigger.info = "Run-Dos2Unix"
     #   trigger.run = {inline: "./Run-Dos2Unix.ps1"}
     # end
   end
+  
+  config.vm.network "private_network", bridge: "Internal Switch"
+  
+  config.ssh.insert_key = false
+  
+  config.vm.hostname = "InfraSvc-Fedora"
+
+  config.vm.synced_folder "../../HelmWorkShop", "/vagrant/HelmWorkShop", type: "rsync", rsync__auto: true
 
   # https://github.com/kurokobo/awx-on-k3s
   # for china
   # https://serverok.in/wget-print-content-to-screen#:~:text=wget%20print%20content%20to%20screen%20wget%20is%20used,this%2C%20you%20can%20replace%20wget%20command%20with%20curl.
   # config.vm.provision "shell", inline: "wget -q -O /dev/stdout http://rancher-mirror.cnrancher.com/k3s/k3s-install.sh | K3S_TOKEN=SECRET INSTALL_K3S_MIRROR=cn INSTALL_K3S_EXEC=\"--cluster-init --write-kubeconfig-mode 644\" sh -"
-  config.vm.provision "shell", inline: "wget -q -O /dev/stdout http://rancher-mirror.cnrancher.com/k3s/k3s-install.sh | INSTALL_K3S_MIRROR=cn INSTALL_K3S_EXEC=\"--write-kubeconfig-mode 644\" sh -"
+  # config.vm.provision "shell", inline: "wget -q -O /dev/stdout http://rancher-mirror.cnrancher.com/k3s/k3s-install.sh | INSTALL_K3S_MIRROR=cn INSTALL_K3S_EXEC=\"--write-kubeconfig-mode 644\" sh -"
   # for other country
   # config.vm.provision "shell", inline: "wget -q -O /dev/stdout https://get.k3s.io | sh -s - --write-kubeconfig-mode 644"
   
@@ -49,7 +51,7 @@ Vagrant.configure("2") do |config|
   # for alpine
   #config.vm.provision "shell", inline: "sudo apk add helm"
   # for others
-  config.vm.provision "shell", inline: "sudo snap install helm --classic"
+  # config.vm.provision "shell", inline: "sudo snap install helm --classic"
   # config.vm.provision "shell", inline: "sudo apt install helm -y"
 
   # reboot for alpine
