add fedora vagrant provision script

--- a/LocalWorkShop/.ssh/config
+++ b/LocalWorkShop/.ssh/config
@@ -25,3 +25,10 @@ Host InfSvc-Alpine
     User vagrant
     IdentityFile ~/.ssh/vagrant
     Port 22
+
+Host InfSvc-Fedora
+    StrictHostKeyChecking no
+    HostName 192.168.255.31
+    User vagrant
+    IdentityFile ~/.ssh/vagrant
+    Port 22
