--- a/AnsibleWorkShop/roles/infra-kube-resources/handlers/main.yml
+++ b/AnsibleWorkShop/roles/infra-kube-resources/handlers/main.yml
@@ -1,2 +1,8 @@
 ---
 # handlers file for infra
+- name: Restart k3s service
+  ansible.builtin.service:
+    name: k3s
+    state: restarted
+  retries: 3
+  delay: 10
