--- a/VagrantWorkShop/InfraSvc-Fedora/Vagrantfile
+++ b/VagrantWorkShop/InfraSvc-Fedora/Vagrantfile
@@ -16,7 +16,8 @@ Vagrant.configure("2") do |config|
 
   config.vm.provider "hyperv" do |hv, config|
     hv.vmname = "InfraSvc-Fedora"
-    hv.memory = 4096
+    hv.memory = 1024
+    hv.maxmemory = 4096
     hv.cpus = 4
     # config.trigger.before :'VagrantPlugins::HyperV::Action::StartInstance', type: :action do |trigger|
     #   trigger.info = "Run-Dos2Unix"
@@ -37,6 +38,9 @@ Vagrant.configure("2") do |config|
 
   # extend root partition
   config.vm.provision "shell", path: "Resize-Partition.sh"
+
+  # reboot
+  config.vm.provision "shell", reboot: true
 
   # https://github.com/kurokobo/awx-on-k3s
   # for china
