change mirror source

--- a/PackerWorkShop/debian/http/preseed.cfg
+++ b/PackerWorkShop/debian/http/preseed.cfg
@@ -100,7 +100,7 @@ d-i netcfg/choose_interface select auto
 # If you select ftp, the mirror/country string does not need to be set.
 #d-i mirror/protocol string ftp
 d-i mirror/country string manual
-d-i mirror/http/hostname string mirrors.tuna.tsinghua.edu.cn
+d-i mirror/http/hostname string mirrors.ustc.edu.cn
 d-i mirror/http/directory string /debian
 d-i mirror/http/proxy string
 
@@ -341,7 +341,7 @@ d-i base-installer/kernel/override-image string linux-server
 # Select which update services to use; define the mirrors to be used.
 # Values shown below are the normal defaults.
 d-i apt-setup/services-select multiselect security, updates
-d-i apt-setup/security_host string mirrors.tuna.tsinghua.edu.cn
+d-i apt-setup/security_host string mirrors.ustc.edu.cn
 
 # Do not scan additional CDs
 apt-cdrom-setup apt-setup/cdrom/set-first boolean false
