update ansible role

--- a/AnsibleWorkShop/roles/infra-kube-resources/handlers/main.yml
+++ b/AnsibleWorkShop/roles/infra-kube-resources/handlers/main.yml
@@ -1,6 +1,7 @@
 ---
 # handlers file for infra
 - name: Restart k3s service
+  become: yes
   ansible.builtin.service:
     name: k3s
     state: restarted
