--- a/VagrantWorkShop/InfraSvc-Fedora/Vagrantfile
+++ b/VagrantWorkShop/InfraSvc-Fedora/Vagrantfile
@@ -33,12 +33,16 @@ Vagrant.configure("2") do |config|
 
   config.vm.synced_folder "../../HelmWorkShop", "/vagrant/HelmWorkShop", type: "rsync", rsync__auto: true
 
-  # set static ip
-  config.vm.provision "shell", path: "Set-StaticIP.sh"
-
+  
+  # config repo source
+  config.vm.provision "shell", path: "Set-CNRepo.sh"
+  
   # extend root partition
   config.vm.provision "shell", path: "Resize-Partition.sh"
-
+  
+  # set static ip
+  config.vm.provision "shell", path: "Set-StaticIP.sh"
+  
   # reboot
   config.vm.provision "shell", reboot: true
 
